<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view5"
        android:layout_width="412dp"
        android:layout_height="84dp"
        android:background="#49B9F8"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/maOTG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:hint="@string/m_otg"
        android:inputType="text|phone"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLoi3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/m_otg_kh_ng_ch_nh_x_c"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/buttonSDT3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maOTG"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonSDT3"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginBottom="224dp"
        android:background="#FFFFFF"
        android:backgroundTint="#49B9F8"
        android:text="@string/ti_p_t_c"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maOTG"
        app:layout_constraintVertical_bias="0.838" />

    <View
        android:id="@+id/view6"
        android:layout_width="413dp"
        android:layout_height="96dp"
        android:background="#49B9F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maOTG"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>